background-style.css
.bg {
  font-family: 'Courier New', Courier, monospace;
  font-size: 0.63em;
  background-color: rgb(240, 240, 240, 0);
  color: var(--bg-text-color);
  z-index: -100;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  word-wrap: break-word;
  user-select: none;
  overflow: hidden;
  translate: translate(0, -50%);
}

.skip-nav {
  position: absolute;
  top: -200px;
}

body {
  background-image: url("/background.png");
}

.skip-nav:focus, .skip-nav:active {
  font-variant-caps: all-petite-caps;
  font-weight: bold;
  text-align: center;
  background-color: var(--sk-background-color);
  border-radius: 20px;
  font-size: 1.8em;
  top: 0.5em;
  left: 0px;
  transform: translateX(calc(50vw - 50%));
  box-shadow: #666 3px 3px 3px;
  /*padding: 0.2em;*/
  color: var(--sk-text-color);
  padding: 0 1em;
  display: grid;
  place-items: center;

}

#remove-button {
  position: absolute;
  right: 10px;
  top: 10px;
}

